# Neural_Networks_1

./: .gitignore  README.md
knn_classifier/: .gitignore  CMakeLists.txt  Makefile  README.md
knn_classifier/src/: KNN.cpp  KNN.h  KNN_main.cpp  MNIST_Image.cpp  MNIST_Image.h  MNIST_Import.cpp  MNIST_Import.h  NCC_Cluster_main.cpp  NCC_main.cpp  Print_Progress.cpp  Print_Progress.h  Timer.cpp  Timer.h  main.cpp
knn_classifier/src/knn/: KNN.cpp  KNN.h
knn_classifier/src/mnist/: MNIST_Image.cpp  MNIST_Image.h  MNIST_Import.cpp
knn_classifier/src/ncc/: NCC.cpp  NCC.h  NCC_clusters.cpp  NCC_clusters.h
knn_classifier/src/ncc_cluster/: NCC_clusters.cpp  NCC_clusters.h
knn_classifier/src/ncm/: NCC.cpp  NCC.h
knn_classifier/src/utils/: Print_Progress.cpp
knn_report/: .gitignore  knn_report.tex
knn_report/bib/: bibliography.bib
knn_report/chapters/: conclusions.tex  introduction.tex  objectives_method.tex  testing.tex  title_page.tex
nn_project/: .gitignore  CMakeLists.txt  Makefile  README.md
nn_project/include/: progressbar.h
nn_project/src/: Layer.h  Network.cpp  Network.h  Perceptron.h  main.cpp
nn_project/src/mnist/: MNIST_Image.cpp  MNIST_Image.h  MNIST_Import.h
nn_project/src/network_functions/: activation_functions.cpp  activation_functions.h  initialization_functions.cpp  initialization_functions.h
nn_project/src/perceptrons/: Perceptron.cpp  Perceptron.h
nn_report/: .gitignore
nn_report/bib/: bibliography.bib
nn_report/chapters/: introduction.tex  neural_networks.tex  objectives_method.tex  testing.tex  title_page.tex
